--- a/nuevaReserva/templates/plazas.html
+++ b/nuevaReserva/templates/plazas.html
@@ -227,12 +227,12 @@
                                     name="r6A" value={{meza6A|default:0}}>
                             </td>
                             <td align="center" style="color: white; background-color: red;">{{meza6An}}</td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz1" value={{totalplaza1|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp1}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp1}}</td>
                             <td align="center">
                                 <font color="white">Plaza 1</font>
                             </td>
@@ -320,12 +320,12 @@
                                     name="r12" value={{meza12|default:0}}>
                             </td>
                             <td align="center" style="color: white; background-color: red;">{{meza12n}}</td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz2" value={{totalplaza2|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp2}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp2}}</td>
                             <td align="center">
                                 <font color="white">Plaza 2</font>
                             </td>
@@ -409,12 +409,12 @@
                             <td align="center">
                                 <!-- <input type="text" readonly style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;" name="r12" value = {{meza12|default:0}} > -->
                             </td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz3" value={{totalplaza3|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp3}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp3}}</td>
                             <td align="center">
                                 <font color="white">Plaza 3</font>
                             </td>
@@ -501,12 +501,12 @@
                                     name="r34" value={{meza34|default:0}}>
                             </td>
                             <td align="center" style="color: white;background-color: red;">{{meza34n}}</td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz4" value={{totalplaza4|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp4}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp4}}</td>
                             <td align="center">
                                 <font color="white">Plaza 4</font>
                             </td>
@@ -593,7 +593,7 @@
                             <td align="center">
                                 <!-- <input type="text" readonly style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;" name="r12" value = {{meza12|default:0}} > -->
                             </td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz5" value={{totalplaza5|default:0}}>
@@ -684,12 +684,12 @@
                             <td align="center">
                                 <!-- <input type="text" readonly style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;" name="r12" value = {{meza12|default:0}} > -->
                             </td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz6" value={{totalplaza6|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp6}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp6}}</td>
                             <td align="center">
                                 <font color="white">Plaza 6</font>
                             </td>
@@ -867,12 +867,12 @@
                                     name="r39" value={{meza39|default:0}}>
                             </td>
                             <td align="center" style="color: white;background-color: red;">{{meza39n}}</td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz8" value={{totalplaza8|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp8}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp8}}</td>
                             <td align="center">
                                 <font color="white">Plaza 8</font>
                             </td>
@@ -940,12 +940,12 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz9" value={{totalplaza9|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{mezaJPn}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{mezaJPn}}</td>
                             <td align="center">
                                 <font color="white">Plaza 9</font>
                             </td>
@@ -1013,12 +1013,12 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td align="center" style="background-color: #25415a;">
+                        <td align="center" style="color: white; background-color: green;">
                             <input type="text" readonly
                                 style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                 name="totalpz10" value={{totalplaza10|default:0}}>
                         </td>
-                        <td align="center" style="color: white; background-color: #25415a;">{{mezaBELUAn}}</td>
+                        <td align="center" style="color: white; background-color: red;;">{{mezaBELUAn}}</td>
                         <td align="center">
                             <font color="white">Plaza 10</font>
                         </td>
@@ -1232,12 +1232,12 @@
                                     name="r6Ac" value={{meza6Ac|default:0}}>
                             </td>
                             <td align="center" style="color: white; background-color: red;">{{meza6Anc}}</td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz1c" value={{totalplaza1c|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp1c}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp1c}}</td>
                             <td align="center">
                                 <font color="white">Plaza 1</font>
                             </td>
@@ -1325,12 +1325,12 @@
                                     name="r12c" value={{meza12c|default:0}}>
                             </td>
                             <td align="center" style="color: white; background-color: red;">{{meza12nc}}</td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz2c" value={{totalplaza2c|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp2c}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp2c}}</td>
                             <td align="center">
                                 <font color="white">Plaza 2</font>
                             </td>
@@ -1414,12 +1414,12 @@
                             <td align="center">
                                 <!-- <input type="text" readonly style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;" name="r12" value = {{meza12|default:0}} > -->
                             </td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz3c" value={{totalplaza3c|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp3c}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp3c}}</td>
                             <td align="center">
                                 <font color="white">Plaza 3</font>
                             </td>
@@ -1506,12 +1506,12 @@
                                     name="r34c" value={{meza34c|default:0}}>
                             </td>
                             <td align="center" style="color: white;background-color: red;">{{meza34nc}}</td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz4c" value={{totalplaza4c|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp4c}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp4c}}</td>
                             <td align="center">
                                 <font color="white">Plaza 4</font>
                             </td>
@@ -1598,7 +1598,7 @@
                             <td align="center">
                                 <!-- <input type="text" readonly style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;" name="r12" value = {{meza12|default:0}} > -->
                             </td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz5c" value={{totalplaza5c|default:0}}>
@@ -1689,12 +1689,12 @@
                             <td align="center">
                                 <!-- <input type="text" readonly style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;" name="r12" value = {{meza12|default:0}} > -->
                             </td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz6c" value={{totalplaza6c|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp6c}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp6c}}</td>
                             <td align="center">
                                 <font color="white">Plaza 6</font>
                             </td>
@@ -1872,12 +1872,12 @@
                                     name="r39c" value={{meza39|default:0}}>
                             </td>
                             <td align="center" style="color: white;background-color: red;">{{meza39nc}}</td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz8c" value={{totalplaza8c|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{totalnp8c}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{totalnp8c}}</td>
                             <td align="center">
                                 <font color="white">Plaza 8</font>
                             </td>
@@ -1945,12 +1945,12 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td align="center" style="background-color: #25415a;">
+                            <td align="center" style="color: white; background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz9c" value={{totalplaza9c|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color: #25415a;">{{mezaJPnc}}</td>
+                            <td align="center" style="color: white; background-color: red;;">{{mezaJPnc}}</td>
                             <td align="center">
                                 <font color="white">Plaza 9</font>
                             </td>
@@ -2018,12 +2018,12 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td align="center" style="background-color: #25415a;">
+                        <td align="center" style="color: white; background-color: green;">
                             <input type="text" readonly
                                 style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                 name="totalpz10c" value={{totalplaza10c|default:0}}>
                         </td>
-                        <td align="center" style="color: white; background-color: #25415a;">{{mezaBELUAnc}}</td>
+                        <td align="center" style="color: white; background-color: red;;">{{mezaBELUAnc}}</td>
                         <td align="center">
                             <font color="white">Plaza 10</font>
                         </td>
