--- a/nuevaReserva/templates/plazas.html
+++ b/nuevaReserva/templates/plazas.html
@@ -598,7 +598,7 @@
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz5" value={{totalplaza5|default:0}}>
                             </td>
-                            <td align="center" style="color: white;background-color: #25415a;" >{{totalnp5}}</td>
+                            <td align="center" style="color: white;background-color: red;" >{{totalnp5}}</td>
                             <td align="center">
                                 <font color="white">Plaza 5</font>
                             </td>
@@ -775,12 +775,12 @@
                             <td align="center">
                                 <!-- <input type="text" readonly style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;" name="r12" value = {{meza12|default:0}} > -->
                             </td>
-                            <td align="center" style="background-color:  #25415a;">
+                            <td align="center" style="background-color:  red">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz7" value={{totalplaza7|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color:  #25415a;">{{totalnp7}}</td>
+                            <td align="center" style="color: white; background-color:  green;">{{totalnp7}}</td>
                             <td align="center">
                                 <font color="white">Plaza 7</font>
                             </td>
@@ -1603,7 +1603,7 @@
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz5c" value={{totalplaza5c|default:0}}>
                             </td>
-                            <td align="center" style="color: white;background-color: #25415a;" >{{totalnp5c}}</td>
+                            <td align="center" style="color: white;background-color: red;" >{{totalnp5c}}</td>
                             <td align="center">
                                 <font color="white">Plaza 5</font>
                             </td>
@@ -1780,12 +1780,12 @@
                             <td align="center">
                                 <!-- <input type="text" readonly style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;" name="r12" value = {{meza12|default:0}} > -->
                             </td>
-                            <td align="center" style="background-color:  #25415a;">
+                            <td align="center" style="background-color: green;">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz7c" value={{totalplaza7c|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color:  #25415a;">{{totalnp7c}}</td>
+                            <td align="center" style="color: white; background-color: red;">{{totalnp7c}}</td>
                             <td align="center">
                                 <font color="white">Plaza 7</font>
                             </td>
