--- a/nuevaReserva/templates/plazas.html
+++ b/nuevaReserva/templates/plazas.html
@@ -775,12 +775,12 @@
                             <td align="center">
                                 <!-- <input type="text" readonly style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;" name="r12" value = {{meza12|default:0}} > -->
                             </td>
-                            <td align="center" style="background-color:  red">
+                            <td align="center" style="background-color:  green">
                                 <input type="text" readonly
                                     style="background-color: transparent; border: none; color: white; text-align: center; width: 25px;"
                                     name="totalpz7" value={{totalplaza7|default:0}}>
                             </td>
-                            <td align="center" style="color: white; background-color:  green;">{{totalnp7}}</td>
+                            <td align="center" style="color: white; background-color:  red;">{{totalnp7}}</td>
                             <td align="center">
                                 <font color="white">Plaza 7</font>
                             </td>
