--- a/nuevaReserva/templates/listadoHistorico.html
+++ b/nuevaReserva/templates/listadoHistorico.html
@@ -53,7 +53,8 @@
 
         <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
             <h1><b>Calendario de Reservas</b></h1>
-            Total de reserva completadas: {{totalCompletado}}
+            Total General de reserva completadas: {{totalCompletado|default:0}}<br>
+            Total de reserva completadas del dia: {{totalCompletadodia|default:0}}
         </div>
 
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">   
