--- a/nuevaReserva/templates/listadoHistorico.html
+++ b/nuevaReserva/templates/listadoHistorico.html
@@ -54,7 +54,8 @@
         <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
             <h1><b>Calendario de Reservas</b></h1>
             Total General de reserva completadas: {{totalCompletado|default:0}}<br>
-            Total de reserva completadas del dia: {{totalCompletadodia|default:0}}
+            Total de reserva completadas del dia: {{totalCompletadodia|default:0}}<br>
+            Total de clientes atendidos en el día: {{totalClientes|default:0}}
         </div>
 
         <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">   
