--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -85,6 +85,9 @@
                             Cantidad de Personas:
                         </th>
                         <th>
+                            Origen:
+                        </th>
+                        <th>
                             Observaciones:
                         </th>
                         <th>
@@ -128,6 +131,10 @@
                         </FONT>
                         <td>
                             <FONT COLOR="white">{{c.cantidadPersonas}}
+                        </td>
+                        </FONT>
+                        <td>
+                            <FONT COLOR="white">{{c.origen_reserva}}
                         </td>
                         </FONT>
                         <td>
