--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -134,7 +134,7 @@
                         </td>
                         </FONT>
                         <td>
-                            <FONT COLOR="white">{{c.origen_reserva}}
+                            <FONT COLOR="white">{{c.origen_reserva|default:" "}}
                         </td>
                         </FONT>
                         <td>
