--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -19,6 +19,7 @@
         <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/enProceso/' >En Progreso</a> -->
         <a class="nav-item nav-link" style="color: #3b1905" href='/historico/' >Calendario</a>
         <a class="nav-item nav-link" style="color: #3b1905" href='/libroIncidencias/' >Incidencias</a>
+        <a class="nav-item nav-link" style="color: #3b1905" href='/libroIncidenciasLog/' >Incidencias Logística</a>
         <a class="nav-item nav-link" style="color: #3b1905" href='/verPlaza/' >Plazas del Día</a>
         <a class="nav-item nav-link" style="color: #3b1905" href='/historicoPlazas/' >Historico Plazas</a>
         <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/estadoActual/' >Estado Actual</a> -->
