--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -100,6 +100,7 @@
                         <th colspan="1"></th>
                         <th colspan="1"></th>
                         <th colspan="1"><a href='/exportarExcel/' class="btn btn-secondary">Exportar a Excel</a></th>
+                        <th colspan="1"></th>
 
                     </tr>
                 </thead>
@@ -166,6 +167,7 @@
                         <td><a href='/cambiarEstadoReserva/{{c.id}}' class="btn btn-success">Atendido</a></td>
                         <td><a href='/cambiarEstadoAnulado/{{c.id}}' class="btn btn-danger">Anulado</a></td>
                         <td><a href='/cambiarEstadoShow/{{c.id}}' class="btn btn-warning">No show</a></td>
+                        <td><a href='/agregarIncidReser/{{c.id}}' class="btn btn-light">Incidencia</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
