--- a/usuarios/templates/home.html
+++ b/usuarios/templates/home.html
@@ -18,7 +18,7 @@ body {
 margin: 0;
 width: 100vw;
 height: 80vh;
-background:  #27130c;
+background:  black;
 display: flex;
 align-items: center;
 text-align: center;
