--- a/usuarios/templates/registro.html
+++ b/usuarios/templates/registro.html
@@ -19,7 +19,7 @@
     margin: 0;
     width: 100vw;
     height: 80vh;
-    background: #24110b;
+    background: black;
     display: flex;
     align-items: center;
     text-align: center;
